Postcube - High res images by default
totod: solve cloudinary 400 issue and use <picture><source>

--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -78,17 +78,17 @@
           <h2>1.&nbsp;Přijímání zásilek a nákupů</h2>
           <div class="mdc-layout-grid__inner">
             <div class="steps__content mdc-layout-grid__cell">
-              <img alt="Fotografie - Upozornění na Telefonu" src="{{ notify | cloudinaryUrl(width=400) }}">
+              <img alt="Fotografie - Upozornění na Telefonu" src="{{ notify | cloudinaryUrl }}">
               <h3>Notifikace o&nbsp;doručení</h3>
               <p>Kurýr pomocí zaslaného jednorázového kódu otevře vaši PostCube a vloží do ní balík. V&nbsp;aplikaci pak potvrdí doručení a vám o&nbsp;tom ihned přijde notifikace.</p>
             </div>
             <div class="steps__content mdc-layout-grid__cell">
-              <img alt="Fotografie - Otevření boxu" src="{{ boxBG02 | cloudinaryUrl(width=400) }}">
+              <img alt="Fotografie - Otevření boxu" src="{{ boxBG02 | cloudinaryUrl }}">
               <h3>Otevření chytrého boxu</h3>
               <p>V&nbsp;okamžiku, kdy chcete zásilku vyzvednout, v&nbsp;aplikaci ve svém telefonu otevřete poštovní schránku a zkontrolujete její&nbsp;obsah.</p>
             </div>
             <div class="steps__content mdc-layout-grid__cell">
-              <img alt="Fotografie Převzetí zásilky" src="{{ boxBG03 | cloudinaryUrl(width=400) }}">
+              <img alt="Fotografie Převzetí zásilky" src="{{ boxBG03 | cloudinaryUrl }}">
               <h3>Převzetí zásilky</h3>
               <p>Pak stačí kliknout na tlačítko „zásilka v&nbsp;pořádku převzata“. Pokud se vyskytne nějaká nesrovnalost, můžete v&nbsp;aplikaci nahlásit problém.</p>
             </div>
@@ -114,22 +114,22 @@
             <h2>2.&nbsp;Odesílání zásilek a vrácení zboží</h2>
             <div class="mdc-layout-grid__inner">
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Zadání požadavku" src="{{ boxBG04 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Zadání požadavku" src="{{ boxBG04 | cloudinaryUrl }}">
                 <h3>Zadání požadavku</h3>
                 <p>V mobilní aplikaci zadáte kód boxu příjemce nebo adresu pro doručení, zvolíte způsob přepravy a uhradíte dopravu.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Označení balíku" src="{{ boxBG05 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Označení balíku" src="{{ boxBG05 | cloudinaryUrl }}">
                 <h3>Označení balíku</h3>
                 <p>Z&nbsp;aplikace si stáhnete a vytisknete štítek s&nbsp;kódem a ten nalepíte na balík. Kód můžete napsat také ručně fixem&nbsp;&ndash; čitelně a viditelně.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Převzetí zásilky" src="{{ boxBG06 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Převzetí zásilky" src="{{ boxBG06 | cloudinaryUrl }}">
                 <h3>Převzetí zásilky</h3>
                 <p>Otevřete PostCube, vložíte do ní zásilku nebo zboží k&nbsp;vrácení a v&nbsp;aplikaci kliknete na „odeslat kurýrovi“. Následně můžete sledovat pohyb zásilky.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Vyzvednutí přepravcem" src="{{ boxBG07 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Vyzvednutí přepravcem" src="{{ boxBG07 | cloudinaryUrl }}">
                 <h3>Vyzvednutí přepravcem</h3>
                 <p>Aplikace pošle ihned informaci o&nbsp;nové zásilce dopravci a ten ji předá nejbližšímu kurýrovi. Kurýr pak zásilku vyzvedne bez vaší přítomnosti.</p>
               </div>
@@ -238,20 +238,20 @@
             <p class="steps__subtitle">O&nbsp;kompletní instalaci samostatné PostCube se může postarat náš montážní tým, nebo ji můžete nainstalovat svépomocí. Přehledný návod, jak na to, je součástí balení.</p>
             <div class="mdc-layout-grid__inner">
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Upozornění na Telefonu" src="{{ boxBG08 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Upozornění na Telefonu" src="{{ boxBG08 | cloudinaryUrl }}">
                 <h3>Na zeď nebo na plot</h3>
                 <p class="content__subtitle--blue">Lze provést svépomocí</p>
                 <p>Na volné místo na zdi přivrtáte rám a na něj PostCube přichytíte spojovacím materiálem, který je součástí sady. Postup pro umístění chytrého boxu na plot je téměř totožný.</p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Upozornění na Telefonu" src="{{ boxBG09 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Upozornění na Telefonu" src="{{ boxBG09 | cloudinaryUrl }}">
                 <h3>Volně stojící u&nbsp;domu</h3>
                 <p class="content__subtitle--blue">Lze provést svépomocí</p>
                 <p>PostCube lze umístit na zem. Pro pohodlnější odebírání zásilek ji ale doporučujeme připevnit na stojan. Ten se navrtá na betonový základ nebo přenosnou dlaždici z&nbsp;<a href="https://shop.postcube.cz/prislusenstvi">naší nabídky.</a>
                 </p>
               </div>
               <div class="steps__content mdc-layout-grid__cell">
-                <img alt="Fotografie - Upozornění na Telefonu" src="{{ boxBG10 | cloudinaryUrl(width=400) }}">
+                <img alt="Fotografie - Upozornění na Telefonu" src="{{ boxBG10 | cloudinaryUrl }}">
                 <h3>Sdílené hnízdo</h3>
                 <p class="content__subtitle--grey">Provádí montážní tým</p>
                 <p>Instalaci několika PostCube vedle sebe i&nbsp;na sebe provádí náš specializovaný montážní tým, který boxy bezpečně sešroubuje. Cena montáže závisí na lokalitě a počtu chytrých&nbsp;boxů.</p>
