[www.hackercamp.cz] Added FAQ link to the header

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -306,6 +306,11 @@
       display: none;
     }
 
+    .hc-navbar__link {
+      line-height: 56px;
+      margin-right: 2em;
+    }
+
     @media screen and (min-width: 600px) {
       .hc-navbar {
         height: 100px;
@@ -416,6 +421,7 @@
       </svg>
     </div>
     <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <a class="hc-link hc-navbar__link" href="/faq/">Často kladené dotazy</a>
       <a
         class="hc-link hc-link--decorated"
         href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
