--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -9,8 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div
-          class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <div><p><span><b>We are proud of our<br>20-year track record</b></span> of building great companies in
               successful partnerships with business owners and managers.</p>
           </div>
@@ -18,7 +17,7 @@
             <a class="button__info" href="/investments/">OUR PORTFOLIO</a>
           </div>
         </div>
-        <div class="intro__video mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
+        <div class="intro__video--phone mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <video id="video" aria-hidden="true" muted loop playsinline
                  poster="https://res.cloudinary.com/topmonks/image/upload/v1628779515/arx.monks.cloud/header-poster.png">
             <source
@@ -38,11 +37,11 @@
               playButton.style.display = "none";
             });</script>
         </div>
-        <div class="after-intro__video">
+        <div class="intro__video--pc mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <video aria-hidden="true" muted autoplay loop playsinline
-                 poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_622,q_auto,w_700/v1628779515/arx.monks.cloud/header-poster.png">
+                 poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_740,w_1177,q_auto/v1628779515/arx.monks.cloud/header-poster.png">
             <source
-              src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+              src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_740,w_1177,q_auto/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
         </div>
       </div>
