ARX - button hover efekt na videu

--- a/arx.monks.cloud/src/stylesheets/hp.scss
+++ b/arx.monks.cloud/src/stylesheets/hp.scss
@@ -29,6 +29,9 @@
       button.play-btn {
         background: none;
         border: none;
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
 
