ARX - optimalizace videa

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -19,9 +19,9 @@
         </div>
         <div class="intro__video--phone mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <video id="video" aria-hidden="true" muted loop
-                 poster="https://res.cloudinary.com/topmonks/image/upload/v1628779515/arx.monks.cloud/header-poster.png">
+                 poster="https://res.cloudinary.com/topmonks/image/upload/v1628779515/q_auto/arx.monks.cloud/header-poster.png">
             <source
-              src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+              src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177,q_auto/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
           <button id="play-btn" class="play-btn" aria-label="Přehrát video o PostCube">
             <svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg">
