Postcube - IČO do kontaktů

--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -128,7 +128,8 @@
                   <div property="geo" typeof="GeoCoordinates">
                     <meta property="latitude" content="50.045386">
                     <meta property="longitude" content="14.491246">
-                  </div>
+                  </div><br>
+                  <span>IČO: 09730931</span>
                 </div>
               </div>
             </div>
