--- a/arx.monks.cloud/src/html/contact/index.njk
+++ b/arx.monks.cloud/src/html/contact/index.njk
@@ -4,6 +4,11 @@
 {% block links %}
   <link rel="stylesheet" href="/assets/css/contact.css">
   <style>
+    @media (min-width: 839px) and (max-width: 1023px) {
+      .intro__box {
+        padding: 4em;
+      }
+    }
     @media (max-width: 739px) {
       img {
         width: 100%;
