--- a/arx.monks.cloud/src/stylesheets/work-with-us.scss
+++ b/arx.monks.cloud/src/stylesheets/work-with-us.scss
@@ -15,8 +15,8 @@
 .managers {
   padding: 2em 0;
   @media screen and (min-width: 1024px) {
-    background: url("/assets/img/managers-bg.jpg") 100% no-repeat;
-    background-size: 100% 100%;
+    background: cloudinaryUrl("/arx.monks.cloud/work-with-us-manager.jpg") 100% no-repeat;
+    background-size: cover;
     .mdc-layout-grid__cell {
       width: 50%;
     }
