Added FAQ about language

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -908,6 +908,20 @@
         </div>
       </div>
     </div>
+    <div id="faq-20" class="hc-card mdc-layout-grid__cell mdc-layout-grid__cell--span-12" typeof="Question">
+      <a href="#faq-20"><h2 property="name">Je konference jen v češtině? Můžu mít přednášku anglicky, vzít česky nemluvícího kolegu?</h2></a>
+      <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
+        <div property="text">
+          <p>Letošnímu Hacker campu říkáme nultý ročník, protože je to pro nás takový experiment,
+            chceme zkusit něco úplně nového, co si půjčuje hodně konceptů z jiných super akcí. 
+            No a protože je to trochu MVP, tak jsme se rozhodli odříznout další jazyk, všechen program 
+            je proto v češtině, všichni zatím přihlášení mluví česky. Na hacker campu je už teď milion 
+            návrhů na program, který nepotřebuje rozumět češtině, od natáčení podcastu po sport a biohacking. 
+            Do budoucna chceme určitě být akce i pro vaše zahraniční kámoše, expaty a mezinárodní týmy, tento 
+            rok jsme ale co se jazyka týče CZ only.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 
