--- a/arx.monks.cloud/src/stylesheets/news.scss
+++ b/arx.monks.cloud/src/stylesheets/news.scss
@@ -31,6 +31,11 @@
       opacity: 0.43;
       padding-right: 1em;
     }
+    img {
+      height: 240px;
+      width: 100%;
+      object-fit: cover;
+    }
   }
 
   .intro {
