ARX - Video transparent cover for phone and pc

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -18,11 +18,12 @@
           </div>
         </div>
         <div class="intro__video--phone mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
-          <video id="video" aria-hidden="true" muted loop
-                 poster="https://res.cloudinary.com/topmonks/image/upload/v1628779515/q_auto/arx.monks.cloud/header-poster.png">
+          <video id="video" aria-hidden="true" muted loop>
             <source
               src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177,q_auto/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
+          <div class="intro__video--phone-cover">
+          </div>
           <button id="play-btn" class="play-btn" aria-label="Přehrát video o PostCube">
             <svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle opacity="0.43" cx="34" cy="34" r="34" fill="#0A2137"/>
@@ -43,6 +44,8 @@
             <source
               src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_740,w_1177,q_auto/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
+          <div class="intro__video--pc-cover">
+          </div>
         </div>
       </div>
     </div>
