--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -238,11 +238,13 @@ html, body {
     color: var(--mdc-theme--secondary-light);
   }
 
-  img {
-    margin-bottom: 1em;
-    width: 100%;
-    height: 260px;
-    object-fit: cover;
+  @media (min-width: 440px) {
+    img {
+      margin-bottom: 1em;
+      width: 100%;
+      height: 260px;
+      object-fit: cover;
+    }
   }
 }
 
