--- a/arx.monks.cloud/src/stylesheets/hp.scss
+++ b/arx.monks.cloud/src/stylesheets/hp.scss
@@ -14,6 +14,10 @@
   }
 
   .intro__video--phone {
+    position: relative;
+    @media (max-width: 720px) {
+      display: flex;
+    }
     @media (min-width: 1024px) {
       display: none;
     }
@@ -24,15 +28,26 @@
       video {
         width: 100%;
         height: auto;
-        opacity: 70%;
       }
       button.play-btn {
         background: none;
         border: none;
+
         &:hover {
           cursor: pointer;
         }
       }
+    }
+
+    .intro__video--phone-cover {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: black;
+      opacity: 23%;
+      width: 100%;
+      height: 440px;
+      overflow: hidden;
     }
 
     button.play-btn {
@@ -63,14 +78,13 @@
     @media (max-width: 1023px) {
       display: none;
     }
-
     video {
       position: absolute;
       top: 0;
       right: 0;
       object-fit: cover;
-      opacity: 75%;
       margin-top: 4em;
+
       @media (min-width: 1024px) and (max-width: 1180px) {
         width: 60%;
         height: 580px;
@@ -92,8 +106,41 @@
         height: 620px;
       }
     }
-
   }
+
+  .intro__video--pc-cover {
+    background-color: black;
+    opacity: 23%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 4em;
+    @media (max-width: 1023px) {
+      display: none;
+    }
+
+    @media (min-width: 1024px) and (max-width: 1180px) {
+      width: 60%;
+      height: 580px;
+    }
+    @media (min-width: 1181px) and (max-width: 1300px) {
+      width: 65%;
+      height: 580px;
+    }
+    @media (min-width: 1301px) and (max-width: 1439px) {
+      width: 68%;
+      height: 580px;
+    }
+    @media (min-width: 1440px) and (max-width: 1800px) {
+      width: 53%;
+      height: 600px;
+    }
+    @media (min-width: 1801px) {
+      width: 53%;
+      height: 620px;
+    }
+  }
+
 }
 
 /* Section: About */
