--- a/arx.monks.cloud/src/stylesheets/news.scss
+++ b/arx.monks.cloud/src/stylesheets/news.scss
@@ -2,7 +2,7 @@
 
 
 @media (min-width: 540px) {
- .intro__box {
+  .intro__box {
     padding: 1.5em 4em;
   }
 }
@@ -18,6 +18,7 @@
       color: var(--mdc-theme--secondary);
       padding-right: 1em;
     }
+
     time {
       font-size: 18px;
       font-weight: normal;
@@ -31,10 +32,13 @@
       opacity: 0.43;
       padding-right: 1em;
     }
-    img {
-      height: 240px;
-      width: 100%;
-      object-fit: cover;
+
+    @media (min-width: 440px) {
+      img {
+        height: 240px;
+        width: 100%;
+        object-fit: cover;
+      }
     }
   }
 
