Postcube - New images

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -1,8 +1,7 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
-{% set domacnostiPC = images["domacnosti-bg01.png"]["public_id"] %}
-
-{% set domacnostiBG01 = images["delivery-man-header.jpg"]["public_id"] %}
+{% set domacnostiPC = images["rodinnedomy1.jpg"]["public_id"] %}
+{% set domacnostiBG01 = images["rodinnedomy2.jpg"]["public_id"] %}
 {% set domacnostiBG02 = images["hp-bg01.png"]["public_id"] %}
 
 {% block title %}
