--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
 {% set firmyBG = images["firmy-bg01.jpg"]["public_id"] %}
-{% set firmyBG01 = images["hp-bg02.png"]["public_id"] %}
+{% set firmyBG01 = images["bytovedomy2.jpg"]["public_id"] %}
 {% set firmyBG02 = images["firmy-bg02.png"]["public_id"] %}
 
 {% block title %}
