Postcube - Nová sekce v Jak box funguje

--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -234,7 +234,104 @@
             </div>
           </div>
           <div id="step--four" class="steps mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>4.&nbsp;Instalace poštovní schránky PostCube</h2>
+            <h2>4.&nbsp;Klíče pro kurýra</h2>
+            <div class="mdc-layout-grid__inner">
+              <div class="steps__content mdc-layout-grid__cell">
+                <div class="steps__bg">
+                  <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33.2027 46.232L26.6667 53.3333H21.3333V58.6667H16V64H0V50.6667L18.3067 32.136C21.1867 38.6 26.56 43.6987 33.2027 46.232ZM64 21.3333C64 33.1147 54.448 42.6667 42.6667 42.6667C30.8853 42.6667 21.3333 33.1147 21.3333 21.3333C21.3333 9.552 30.8853 0 42.6667 0C54.448 0 64 9.552 64 21.3333ZM56 13.3333C56 10.3893 53.6107 8 50.6667 8C47.7227 8 45.3333 10.3893 45.3333 13.3333C45.3333 16.2773 47.7227 18.6667 50.6667 18.6667C53.6107 18.6667 56 16.2773 56 13.3333Z" fill="#1538E5"/>
+                  </svg>
+                </div>
+                <h3>Co je klíč pro kurýra?</h3>
+                <p>Aby mohl vaši schránku otevřít úplně každý, komu dáte přístup,
+                  existuje možnost vytvoření speciálního odkazu.</p>
+              </div>
+              <div class="steps__content mdc-layout-grid__cell">
+                <div class="steps__bg">
+                  <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0)">
+                      <path d="M16.0533 19.704C17.1173 18.944 18.32 18.592 19.4987 18.592C22.016 18.592 24.4373 20.192 25.232 22.856C24.2133 22.072 23.0187 21.6907 21.816 21.6907C20.5947 21.6907 19.3653 22.0827 18.2933 22.848C16.1627 24.368 15.2187 26.9573 16.04 29.4107C12.728 27.0373 12.7147 22.0853 16.0533 19.704ZM26.0293 53.7573C28.68 54.648 36.8853 56.92 46.3893 64L64 51.44C59.432 45.0347 60.6907 40.5547 56.152 34.192C53.0533 29.8507 51.28 29.7813 48.0533 30.3733L49.6507 32.6133C50.6133 33.9653 48.5707 35.4133 47.6133 34.064L46.1893 32.064C45.0293 30.44 42.7787 31.4533 40.7147 31.928L42.6533 34.6453C43.6133 35.992 41.5787 37.448 40.616 36.096L38.9387 33.744C37.7493 32.0747 35.424 33.1893 33.352 33.7173L35.4027 36.592C36.3707 37.9467 34.3227 39.3893 33.3653 38.0427L25.0507 26.4C22.4693 22.7787 16.816 26.6213 19.488 30.3707L31.768 47.592C30.4507 47.104 28.1333 46.6613 26.6213 46.6613C21.944 46.6613 20.144 51.7813 26.0293 53.7573ZM17.2667 48H5.33333V10.6667H32V28.5013L37.3333 27.2453V5.33333C37.3333 2.38933 34.9467 0 32 0H5.33333C2.38667 0 5.70641e-07 2.38933 5.70641e-07 5.33333V55.1413C-0.0026661 61.0427 9.34133 64 18.68 64C23.512 64 28.3307 63.2027 31.864 61.616C26.208 59.0933 14.856 57.4133 17.2667 48Z" fill="#1538E5"/>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0">
+                        <rect width="64" height="64" fill="white"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <h3>Jak získat klíč?</h3>
+                <p>V&nbsp;aplikaci vygenerujete jednorázový odkaz (URL adresu), jehož platnost je
+                  pouze 24&nbsp;hodin.</p>
+                <p>Funkci generování odkazů najdete po kliknutí na kartu vaši schránky
+                  v&nbsp;nastavení aplikace.</p>
+              </div>
+              <div class="steps__content mdc-layout-grid__cell">
+                <div class="steps__bg">
+                  <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0)">
+                      <path d="M41.2103 0C31.9917 0 23.7543 6.15733 23.7543 14.5787C23.7543 17.5653 24.829 20.5013 26.733 22.7733C26.8103 25.4427 25.245 29.2667 23.8317 32.0507C27.6157 31.3627 32.9997 29.8533 35.437 28.3573C37.4957 28.8587 39.4743 29.088 41.3383 29.088C51.645 29.088 58.6663 22.04 58.6663 14.576C58.6663 6.11467 50.373 0 41.2103 0V0ZM35.0557 18.016C34.5037 18.456 33.7277 18.6773 32.7383 18.6773C31.8903 18.6773 31.133 18.5147 30.4823 18.1867L30.8477 16.7413C31.509 17.0747 32.173 17.2427 32.853 17.2427C33.2423 17.2427 33.5463 17.1707 33.765 17.0213C34.1863 16.736 34.213 16.16 33.797 15.832C33.5997 15.6773 33.261 15.5173 32.7703 15.3547C31.3063 14.8667 30.5783 14.1067 30.5783 13.0667C30.5783 12.3947 30.8503 11.8427 31.3863 11.408C31.9223 10.9733 32.6423 10.7573 33.5383 10.7573C34.3197 10.7573 34.997 10.888 35.5863 11.1547L35.1863 12.552C34.6557 12.3013 34.093 12.1787 33.5143 12.1787C33.1597 12.1787 32.8823 12.248 32.6823 12.384C32.2823 12.656 32.293 13.144 32.6343 13.4347C32.7997 13.576 33.2023 13.7627 33.8477 13.9893C34.557 14.24 35.0717 14.5493 35.405 14.92C35.733 15.2907 35.8957 15.7493 35.8957 16.2987C35.8903 17.0027 35.613 17.576 35.0557 18.016ZM43.909 18.552C43.7863 15.5093 43.7303 13.4453 43.7303 12.3627H43.693C43.509 13.1787 42.885 15.2 41.829 18.4267H40.453C39.8183 16.2027 38.8797 12.3653 38.8797 12.3653H38.8583L38.5863 18.5547H36.9463L37.437 10.888H39.8237L41.1783 16.176L42.813 10.888H45.229L45.6397 18.5547H43.909V18.552ZM51.3277 18.0507C50.7703 18.496 49.981 18.72 48.9837 18.72C48.173 18.72 47.4103 18.576 46.6823 18.2133L47.069 16.6827C47.709 17.0107 48.365 17.2027 49.0983 17.2027C49.4797 17.2027 49.7783 17.1307 49.9863 16.9867C50.389 16.7147 50.405 16.1733 50.0183 15.8667C49.8237 15.7147 49.485 15.5573 49.0077 15.3947C47.5277 14.904 46.7783 14.1227 46.7783 13.0693C46.7783 12.3893 47.0583 11.8187 47.6077 11.3787C48.149 10.9387 48.8823 10.7173 49.781 10.7173C50.565 10.7173 51.2583 10.8507 51.845 11.1173L51.877 11.1333L51.4557 12.616C50.917 12.3627 50.3783 12.224 49.757 12.224C49.413 12.224 49.1383 12.2907 48.9437 12.4213C48.5677 12.6773 48.573 13.1333 48.901 13.4053C49.0637 13.5413 49.4663 13.728 50.0983 13.952C50.813 14.2027 51.341 14.52 51.6717 14.8933C52.005 15.272 52.1757 15.7413 52.1757 16.2987C52.1757 17.0133 51.8903 17.6027 51.3277 18.0507ZM31.9997 35.512V42.6667H10.6663V21.3333H19.7703C18.629 18.5067 18.2983 15.928 18.4957 13.3333H10.6663C7.72234 13.3333 5.33301 15.7227 5.33301 18.6667V58.6667C5.33301 61.6107 7.72234 64 10.6663 64H31.9997C34.9437 64 37.333 61.6107 37.333 58.6667V33.376C35.9757 34.1893 33.5143 35.04 31.9997 35.512ZM15.9997 56H10.6663V53.3333H15.9997V56ZM15.9997 50.6667H10.6663V48H15.9997V50.6667ZM23.9997 56H18.6663V53.3333H23.9997V56ZM23.9997 50.6667H18.6663V48H23.9997V50.6667ZM31.9997 56H26.6663V53.3333H31.9997V56ZM31.9997 50.6667H26.6663V48H31.9997V50.6667Z" fill="#1538E5"/>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0">
+                        <rect width="64" height="64" fill="white"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <h3>Jak kurýr otevře schránku?</h3>
+                <p>Odkaz pro otevření PostCube ve tvaru např. <b>postcube.cz/kod/54RH&shy;543</b>
+                  pošlete kurýrovi.</p>
+                <p>Kurýr po otevření odkazu dostane přístup k&nbsp;tlačítku, kterým přes
+                  Bluetooth otevře vaši PostCube.</p>
+              </div>
+            </div>
+
+            {# TODO: Prémiové funkce a vybavení #}
+
+            <div id="step--five" class="steps mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <h2>5.&nbsp;Servis a reklamace</h2>
+              <div class="mdc-layout-grid__inner">
+                <div class="steps__content mdc-layout-grid__cell">
+                  <div class="steps__bg">
+                    <svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M29.78 47.308C15.046 54.042 -7.82397 9.588 6.57803 2.078L10.792 0L17.776 13.634L13.612 15.686C9.23403 18.034 18.352 35.846 22.83 33.674C23.012 33.592 26.944 31.66 26.958 31.652L34 45.242C33.984 45.25 30.022 47.198 29.78 47.308ZM26.704 20.49L32.538 22.23C32.984 20.736 32.858 19.072 32.058 17.596C31.26 16.118 29.934 15.102 28.442 14.658L26.704 20.49ZM30.312 8.374C33.414 9.298 36.164 11.406 37.824 14.476C39.486 17.548 39.744 21.002 38.82 24.102L35.23 23.032C35.88 20.85 35.696 18.42 34.526 16.258C33.36 14.096 31.424 12.614 29.24 11.966L30.312 8.374ZM32.212 2C36.942 3.41 41.138 6.624 43.67 11.312C46.208 15.998 46.602 21.268 45.192 26L41.512 24.904C42.64 21.114 42.324 16.892 40.296 13.14C38.264 9.386 34.904 6.81 31.114 5.682L32.212 2Z" fill="#1538E5"/>
+                    </svg>
+                  </div>
+                  <h3>Kontaktujte nás</h3>
+                  <p>Naše zákaznická podpora je vám k&nbsp;dispozici na telefonním čísle +420&nbsp;739&nbsp;304&nbsp;189, e-mailu
+                    <a href="mailto:info&#64;postcube.cz">info&#64;<!-- -->postcube.cz</a>
+                    a v&nbsp;online chatu na&nbsp;webu.</p>
+                </div>
+                <div class="steps__content mdc-layout-grid__cell">
+                  <div class="steps__bg">
+                    <svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0)">
+                        <path d="M20 6.004C28.822 6.004 36 11.702 36 18.704C36 24.774 29.942 31.326 20.15 31.326C16.99 31.326 14.714 30.692 12.714 30.204C10.782 31.39 10.202 31.83 6.702 32.95C7.532 29.914 7.426 28.586 7.364 26.582C5.69 24.58 4 22.444 4 18.704C4 11.702 11.178 6.004 20 6.004ZM20 2C9.438 2 0 9.052 0 18.704C0 22.126 1.23 25.486 3.41 28.094C3.504 31.148 1.708 35.53 0.088 38.718C4.424 37.936 10.592 36.202 13.386 34.488C15.748 35.066 18.01 35.33 20.15 35.33C31.956 35.33 40 27.254 40 18.704C40 9 30.498 2 20 2ZM43.07 24.348C42.748 25.324 42.348 26.27 41.868 27.18C45.222 29.704 46.382 33.632 42.796 37.91C42.754 39.4 42.698 40.008 43.072 41.64C41.288 41.026 41.114 40.856 39.742 40.014C35.488 41.052 31.212 41.406 27.564 38.304C26.44 38.622 25.274 38.86 24.084 39.032C27.11 42.786 32.68 44.826 39.238 43.232C41.066 44.354 45.104 45.486 47.942 46.002C46.882 43.912 45.708 41.044 45.766 39.044C49.276 34.848 48.852 28.172 43.07 24.348ZM13 16.822C11.818 16.822 10.858 17.78 10.858 18.964C10.858 20.148 11.818 21.106 13 21.106C14.182 21.106 15.142 20.148 15.142 18.964C15.142 17.78 14.182 16.822 13 16.822ZM20 16.822C18.818 16.822 17.858 17.78 17.858 18.964C17.858 20.148 18.818 21.106 20 21.106C21.182 21.106 22.142 20.148 22.142 18.964C22.142 17.78 21.182 16.822 20 16.822ZM27 16.822C25.818 16.822 24.858 17.78 24.858 18.964C24.858 20.148 25.818 21.106 27 21.106C28.182 21.106 29.142 20.148 29.142 18.964C29.142 17.78 28.182 16.822 27 16.822Z" fill="#1538E5"/>
+                      </g>
+                      <defs>
+                        <clippath id="clip0">
+                          <rect width="48" height="48" fill="white"/>
+                        </clippath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <h3>Nahlásíte požadavky</h3>
+                  <p>V&nbsp;e-mailu nebo po telefonu nám sdělíte číslo vaší objednávky, popřípadě faktury a problém, který nastal.</p>
+                </div>
+                <div class="steps__content mdc-layout-grid__cell">
+                  <div class="steps__bg">
+                    <svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4.356 22H2V18C2.976 17.998 3.568 17.444 3.724 16.67C4.998 11.748 10.052 0 23.724 0C37.5 0 42.692 12.27 44.312 16.826C44.612 17.668 45.23 17.994 46 17.994L46.002 22H43.642C44.792 22.918 46 24.72 46 28.262C46 31.522 44.192 35.634 40.246 37.324C35.94 44.214 30.192 48 24 48C17.808 48 12.06 44.214 7.754 37.324C3.806 35.634 2 31.522 2 28.262C2 24.72 3.206 22.918 4.356 22ZM28.4 36.918H19.6C19.608 36.942 20.852 40.398 24 40.398C27.268 40.398 28.392 36.942 28.4 36.918ZM37.434 22H10.564L10.538 23.03C10.538 24.366 9.174 25.258 7.962 24.718C7.624 24.568 7.102 24.572 6.728 24.816C4.894 26.018 5.092 32.544 9.578 34.074C11.41 34.7 14.306 40.28 17.438 34.87C18.522 33.002 21.94 32.792 24 34.276C26.058 32.792 29.478 33.002 30.56 34.87C33.692 40.28 36.588 34.7 38.422 34.074C42.91 32.544 43.104 26.018 41.27 24.816C40.84 24.536 40.296 24.604 40.038 24.718C38.826 25.26 37.46 24.366 37.46 23.03L37.434 22ZM18.042 23.992C16.774 23.992 15.75 25.232 15.75 26.762C15.75 28.292 16.774 29.532 18.042 29.532C19.306 29.532 20.334 28.292 20.334 26.762C20.334 25.232 19.306 23.992 18.042 23.992ZM32.25 26.762C32.25 28.292 31.224 29.532 29.958 29.532C28.692 29.532 27.666 28.292 27.666 26.762C27.666 25.232 28.692 23.992 29.958 23.992C31.224 23.992 32.25 25.232 32.25 26.762ZM22 4.086C20.53 4.236 19.2 4.574 18 5.052V12C18 13.104 17.104 14 16 14C14.896 14 14 13.104 14 12V7.462C9.694 11.096 8.03 16.488 7.62 18H40.41C39.744 15.988 38.032 11.08 34 7.646V12C34 13.104 33.104 14 32 14C30.896 14 30 13.104 30 12V5.188C28.802 4.692 27.472 4.326 26 4.14V10C26 11.104 25.104 12 24 12C22.896 12 22 11.104 22 10V4.086Z" fill="#1538E5"/>
+                    </svg>
+                  </div>
+                  <h3>Přijede technik</h3>
+                  <p>Pokud je chyba na naší straně, servisní technik z&nbsp;našeho týmu vám přijede vyměnit kus za kus. Veškeré náklady hradíme&nbsp;my.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="step--five" class="steps mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h2>5.&nbsp;Instalace poštovní schránky PostCube</h2>
             <p class="steps__subtitle">O&nbsp;kompletní instalaci samostatné PostCube se může postarat náš montážní tým, nebo ji můžete nainstalovat svépomocí. Přehledný návod, jak na to, je součástí balení.</p>
             <div class="mdc-layout-grid__inner">
               <div class="steps__content mdc-layout-grid__cell">
@@ -325,6 +422,7 @@
               </div>
             </div>
           </div>
+
 
         </div>
       </div>
