Postcube - Rozměry bg

--- a/postcube.cz/src/html/components/choose-pc.njk
+++ b/postcube.cz/src/html/components/choose-pc.njk
@@ -55,8 +55,10 @@
     margin-top: 20px;
     padding: 24px 24px 10px;
     color: white;
+    background-color: var(--postcube-primary);
+    /*
     background-image: url({{ sizeBG | cloudinaryUrl(dpr="auto", width=1020) }});
-    background-size: 100% auto;
+    background-size: 100% auto;*/
   }
 
   .stared-content {
