Postcube - změna ID pro checkbox rozměry

--- a/postcube.cz/src/html/components/choose-pc.njk
+++ b/postcube.cz/src/html/components/choose-pc.njk
@@ -88,8 +88,8 @@
           chodí. Zvolte si rozměr XS, S, M nebo&nbsp;L.</p>
         <div class="accordion mdc-layout-grid__cell">
           <div>
-            <input type="checkbox" name="accordion__faq" id="faq2" class="faq--input">
-            <label for="faq2" class="size--label">Ukázat rozměry</label>
+            <input type="checkbox" name="accordion__faq" id="size1" class="faq--input">
+            <label for="size1" class="size--label">Ukázat rozměry</label>
             <div class="size--content faq--content">
               <table id="pc-sizes">
                 <tr>
